# rust-os

./: Cargo.toml
src/: main.rs
src/interrupts/: idt.rs  mod.rs
src/memory/: frame_allocator.rs  mod.rs  paging.rs
src/process/: mod.rs  scheduler.rs  task.rs
