[package]
name = "rust-os"
version = "0.1.0"
edition = "2021"

[dependencies]
bootloader = "0.9"
x86_64 = "0.14"
uart_16550 = "0.2"
pic8259 = "0.10"
pc-keyboard = "0.5"
spin = "0.9"
linked_list_allocator = "0.9"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

# .cargo/config.toml
[build]
target = "x86_64-rust-os.json"

[unstable]
build-std = ["core", "compiler_builtins"]
build-std-features = ["compiler_builtins-mem"]

